red-package-update

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
     <title>error</title>
 </head>
 <body>
-出错了，请与管理员联系。。。
+出错了，请与管理员联系。。。.
 <!--    <span th:text="${exception.message}"></span> -->
 <span th:text="${exception}"></span>
 
